--- a/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
+++ b/RocketClient/src/main/java/rocket/app/view/Mortgage.fxml
@@ -1,10 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="rocket.app.view.MortgageController">
-
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rocket.app.view.MortgageController">
+   <children>
+      <TitledPane animated="false" prefHeight="349.0" prefWidth="482.0" text="Mortgage Payment Calculator">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <GridPane layoutX="27.0" layoutY="24.0" prefHeight="259.0" prefWidth="451.0" AnchorPane.bottomAnchor="58.0" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="24.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Income" />
+                        <Label text="Expenses" GridPane.rowIndex="1" />
+                        <Label text="Credit Score" GridPane.rowIndex="2" />
+                        <Label text="House Cost" GridPane.rowIndex="3" />
+                        <Label text="Loan Term" GridPane.rowIndex="4" />
+                        <Label text="Mortgage Payment" GridPane.rowIndex="5" />
+                        <TextField fx:id="txtIncome" GridPane.columnIndex="1" />
+                        <TextField fx:id="txtExpenses" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="txtCreditScore" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="txtHouseCost" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <ComboBox fx:id="cmbTerm" prefHeight="31.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="lblMortgagePayment" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                     </children>
+                  </GridPane>
+                  <ButtonBar layoutX="224.0" layoutY="259.0" prefHeight="40.0" prefWidth="242.0">
+                    <buttons>
+                        <Button fx:id="btnCalculate" mnemonicParsing="false" text="Calculate" />
+                        <Button fx:id="btnExit" minWidth="0.0" mnemonicParsing="false" prefHeight="31.0" text="Exit" />
+                    </buttons>
+                  </ButtonBar>
+               </children>
+            </AnchorPane>
+        </content>
+      </TitledPane>
+   </children>
 </AnchorPane>
